# iris

./: .env  .gitignore  Cargo.toml  package.json  tsconfig.json
desktop/: .gitignore  next.config.js  package.json  tailwind.config.js  tsconfig.json
desktop/src/: style.css  utils.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs  oauth.rs  window.rs
desktop/src/components/: IRInput.tsx  header.tsx
desktop/src/layouts/: authLayout.tsx  basicLayout.tsx
desktop/src/pages/: _app.tsx  _document.tsx  deviceonboarding.tsx  home.tsx  index.tsx  login.tsx  register.tsx  testPage.tsx
envtesting/: .env  Cargo.toml
envtesting/src/: lib.rs
iris_core/: .env  Cargo.toml  bindings.ts  package.json
iris_core/prisma-cli/: Cargo.toml
iris_core/src/: db_connection.rs
iris_core/src/db/: new_client.rs
prisma/: .env  schema.prisma
server/: Cargo.toml
server/src/: google_oauth.rs  main.rs  models.rs  oauth.rs  utils.rs
server/src/routes/: auth.rs  user.rs
