[workspace]
members = [
  "server", 
  "iris_core", 
  "envtesting", 
  "iris_core/prisma-cli",
  "desktop/src-tauri"
]

[workspace.dependencies]
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust.git", features = [
  "rspc",
  "migrations",
  "mysql",
], default-features = false, tag="0.6.6"}
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust.git", features = [
  "rspc",
  "migrations",
  "mysql",
], default-features = false, tag="0.6.6"}
rspc = { version = "0.1.2" }
