[package]
name = "iris_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
tokio = { version = "1.25.0", features = ["full"] }
prisma-client-rust = {workspace = true, default-features = false, features = ["rspc", "migrations", "mysql"]}
dotenv = "0.15.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.92"
