[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
axum = { version = "0.6.10", features = ["ws", "macros"] }
rspc = { version = "0.1.3", features = ["axum"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = {version = "1.25.0", features = ["full"]}
tower-http = { version = "0.3.5", default-features = false, features = ["cors"] }
futures = "0.3.21"
sea-orm = { version = "^0.10.7", features = [ "sqlx-mysql", "runtime-async-std-native-tls", "macros" ] }
iris_core = {path = "../iris_core"}
envtesting = {path = "../envtesting"}
dotenv = "0.15.0"
chrono = "0.4.23"
tower-cookies = "0.9.0"
